container wrap + fix add & remove cart + cleaned js

--- a/TP-Shop/index.css
+++ b/TP-Shop/index.css
@@ -21,7 +21,7 @@
 
 .container {
     display: flex;
-    flex-flow: row;
+    flex-flow: row wrap;
 }
 
 .firstImg {
